Fixed the image being too small

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
 #intro-text {
     color: #121619;
     font-family: "Inter", sans-serif;
+    display: block;
 }
 
 #intro {
-    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -30,6 +30,19 @@
     margin-top: 3.5vh;
     width: 35vw;
     height: 90vh;
+    object-fit: cover;
+}
+
+/* When screen size less than 700px, re-organize the images and the text content */
+@media only screen and (max-width: 700px) {
+    #intro-portrait {
+        width: 100%;
+        display: block;
+    }
+
+    #intro {
+        flex-direction: column-reverse;
+    }
 }
 
 #social {
@@ -84,3 +97,11 @@
       */
       
   }
+
+.section {
+    display: block;
+}
+
+.img-piece {
+    width: 100%;
+}
